// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentCard Should handle expanding a framed and non-full page component. 1`] = `
<ComponentCard
  componentName="Let's"
  dockItems={Array []}
  expandedStyle={
    Object {
      "height": "85vh",
      "width": "85vh",
    }
  }
  frameHeight={0}
  frameWidth={0}
  headerHeight={20}
  height="525px"
  iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
  isDataReady={false}
  isFramedComponent={true}
  isFullPage={false}
  menuItems={Array []}
  padding={0}
  showSettings={false}
  width="525px"
>
  <Card
    centered={true}
    className="bioblocks-component-card"
    style={
      Object {
        "height": "530.25px",
        "maxWidth": "unset",
        "padding": "0 0 0 5px",
        "width": "525px",
      }
    }
  >
    <div
      className="ui centered card bioblocks-component-card"
      onClick={[Function]}
      style={
        Object {
          "height": "530.25px",
          "maxWidth": "unset",
          "padding": "0 0 0 5px",
          "width": "525px",
        }
      }
    >
      <div
        style={
          Object {
            "height": "7%",
          }
        }
      >
        <ComponentMenuBar
          componentName="Let's"
          height={20}
          iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
          isExpanded={false}
          menuItems={Array []}
          onExpandToggleCb={[Function]}
          opacity={0.85}
          width="100%"
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <Menu
              secondary={true}
              style={
                Object {
                  "height": 20,
                  "margin": 0,
                }
              }
            >
              <div
                className="ui secondary menu"
                style={
                  Object {
                    "height": 20,
                    "margin": 0,
                  }
                }
              >
                <Menu
                  fluid={false}
                  secondary={true}
                  style={
                    Object {
                      "width": "auto",
                    }
                  }
                  widths={6}
                >
                  <div
                    className="ui secondary six item menu"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                  >
                    <MenuItem
                      fitted="horizontally"
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <div
                        className="horizontally fitted item"
                        onClick={[Function]}
                        style={
                          Object {
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <img
                          alt="component icon"
                          src="assets/icons/bio-blocks-icon.svg"
                          style={
                            Object {
                              "height": "32px",
                              "padding": "2px",
                              "width": "32px",
                            }
                          }
                        />
                        Let's
                      </div>
                    </MenuItem>
                  </div>
                </Menu>
                <MenuItem
                  fitted="horizontally"
                  position="right"
                >
                  <div
                    className="right horizontally fitted item"
                    onClick={[Function]}
                  >
                    <Menu
                      secondary={true}
                    >
                      <div
                        className="ui secondary menu"
                      >
                        <MenuItem
                          style={
                            Object {
                              "flexDirection": "column",
                            }
                          }
                        >
                          <div
                            className="item"
                            onClick={[Function]}
                            style={
                              Object {
                                "flexDirection": "column",
                              }
                            }
                          >
                            <Icon
                              as="i"
                              name="expand arrows alternate"
                              onClick={[Function]}
                            >
                              <i
                                aria-hidden="true"
                                className="expand arrows alternate icon"
                                onClick={[Function]}
                              />
                            </Icon>
                            <span
                              style={
                                Object {
                                  "fontSize": "11px",
                                  "visibility": "hidden",
                                }
                              }
                            >
                              Expand
                            </span>
                          </div>
                        </MenuItem>
                      </div>
                    </Menu>
                  </div>
                </MenuItem>
              </div>
            </Menu>
          </div>
        </ComponentMenuBar>
      </div>
      <div
        style={
          Object {
            "height": "90%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "transform": "scale(calc(515/0),calc((512 - 20)/0))",
              "transformOrigin": "top left",
            }
          }
        >
          <div>
            Go!
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "height": "3%",
          }
        }
      />
    </div>
  </Card>
</ComponentCard>
`;

exports[`ComponentCard Should handle expanding a framed full page component. 1`] = `
<ComponentCard
  componentName="Let's"
  dockItems={Array []}
  expandedStyle={
    Object {
      "height": "85vh",
      "width": "85vh",
    }
  }
  frameHeight={0}
  frameWidth={0}
  headerHeight={20}
  height="525px"
  iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
  isDataReady={false}
  isFramedComponent={true}
  isFullPage={true}
  menuItems={Array []}
  padding={0}
  showSettings={false}
  width="525px"
>
  <Card
    centered={true}
    className="bioblocks-component-card"
    style={
      Object {
        "border": "5em black solid",
        "height": "85vh",
        "maxWidth": "unset",
        "padding": "5px",
        "width": "85vh",
      }
    }
  >
    <div
      className="ui centered card bioblocks-component-card"
      onClick={[Function]}
      style={
        Object {
          "border": "5em black solid",
          "height": "85vh",
          "maxWidth": "unset",
          "padding": "5px",
          "width": "85vh",
        }
      }
    >
      <div
        style={
          Object {
            "height": "7%",
          }
        }
      >
        <ComponentMenuBar
          componentName="Let's"
          height={20}
          iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
          isExpanded={true}
          menuItems={Array []}
          onExpandToggleCb={[Function]}
          opacity={0.85}
          width="100%"
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <Menu
              secondary={true}
              style={
                Object {
                  "height": 20,
                  "margin": 0,
                }
              }
            >
              <div
                className="ui secondary menu"
                style={
                  Object {
                    "height": 20,
                    "margin": 0,
                  }
                }
              >
                <Menu
                  fluid={false}
                  secondary={true}
                  style={
                    Object {
                      "width": "auto",
                    }
                  }
                  widths={6}
                >
                  <div
                    className="ui secondary six item menu"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                  >
                    <MenuItem
                      fitted="horizontally"
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <div
                        className="horizontally fitted item"
                        onClick={[Function]}
                        style={
                          Object {
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <img
                          alt="component icon"
                          src="assets/icons/bio-blocks-icon.svg"
                          style={
                            Object {
                              "height": "32px",
                              "padding": "2px",
                              "width": "32px",
                            }
                          }
                        />
                        Let's
                      </div>
                    </MenuItem>
                  </div>
                </Menu>
                <MenuItem
                  fitted="horizontally"
                  position="right"
                >
                  <div
                    className="right horizontally fitted item"
                    onClick={[Function]}
                  >
                    <Menu
                      secondary={true}
                    >
                      <div
                        className="ui secondary menu"
                      >
                        <MenuItem
                          style={
                            Object {
                              "flexDirection": "column",
                            }
                          }
                        >
                          <div
                            className="item"
                            onClick={[Function]}
                            style={
                              Object {
                                "flexDirection": "column",
                              }
                            }
                          >
                            <Icon
                              as="i"
                              name="compress"
                              onClick={[Function]}
                            >
                              <i
                                aria-hidden="true"
                                className="compress icon"
                                onClick={[Function]}
                              />
                            </Icon>
                            <span
                              style={
                                Object {
                                  "fontSize": "11px",
                                  "visibility": "hidden",
                                }
                              }
                            >
                              Close
                            </span>
                          </div>
                        </MenuItem>
                      </div>
                    </Menu>
                  </div>
                </MenuItem>
              </div>
            </Menu>
          </div>
        </ComponentMenuBar>
      </div>
      <div
        style={
          Object {
            "height": "90%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "transform": "scale(calc(75/0),calc((67 - 20)/0))",
              "transformOrigin": "top left",
            }
          }
        >
          <div>
            Go!
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "height": "3%",
          }
        }
      />
    </div>
  </Card>
</ComponentCard>
`;

exports[`ComponentCard Should handle expanding a non-framed and non-full page component. 1`] = `
<ComponentCard
  componentName="Let's"
  dockItems={Array []}
  expandedStyle={
    Object {
      "height": "85vh",
      "width": "85vh",
    }
  }
  frameHeight={0}
  frameWidth={0}
  headerHeight={20}
  height="525px"
  iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
  isDataReady={false}
  isFramedComponent={false}
  isFullPage={false}
  menuItems={Array []}
  padding={0}
  showSettings={false}
  width="525px"
>
  <Card
    centered={true}
    className="bioblocks-component-card"
    style={
      Object {
        "height": "530.25px",
        "maxWidth": "unset",
        "padding": "0 0 0 5px",
        "width": "525px",
      }
    }
  >
    <div
      className="ui centered card bioblocks-component-card"
      onClick={[Function]}
      style={
        Object {
          "height": "530.25px",
          "maxWidth": "unset",
          "padding": "0 0 0 5px",
          "width": "525px",
        }
      }
    >
      <div
        style={
          Object {
            "height": "7%",
          }
        }
      >
        <ComponentMenuBar
          componentName="Let's"
          height={20}
          iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
          isExpanded={false}
          menuItems={Array []}
          onExpandToggleCb={[Function]}
          opacity={0.85}
          width="100%"
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <Menu
              secondary={true}
              style={
                Object {
                  "height": 20,
                  "margin": 0,
                }
              }
            >
              <div
                className="ui secondary menu"
                style={
                  Object {
                    "height": 20,
                    "margin": 0,
                  }
                }
              >
                <Menu
                  fluid={false}
                  secondary={true}
                  style={
                    Object {
                      "width": "auto",
                    }
                  }
                  widths={6}
                >
                  <div
                    className="ui secondary six item menu"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                  >
                    <MenuItem
                      fitted="horizontally"
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <div
                        className="horizontally fitted item"
                        onClick={[Function]}
                        style={
                          Object {
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <img
                          alt="component icon"
                          src="assets/icons/bio-blocks-icon.svg"
                          style={
                            Object {
                              "height": "32px",
                              "padding": "2px",
                              "width": "32px",
                            }
                          }
                        />
                        Let's
                      </div>
                    </MenuItem>
                  </div>
                </Menu>
                <MenuItem
                  fitted="horizontally"
                  position="right"
                >
                  <div
                    className="right horizontally fitted item"
                    onClick={[Function]}
                  >
                    <Menu
                      secondary={true}
                    >
                      <div
                        className="ui secondary menu"
                      >
                        <MenuItem
                          style={
                            Object {
                              "flexDirection": "column",
                            }
                          }
                        >
                          <div
                            className="item"
                            onClick={[Function]}
                            style={
                              Object {
                                "flexDirection": "column",
                              }
                            }
                          >
                            <Icon
                              as="i"
                              name="expand arrows alternate"
                              onClick={[Function]}
                            >
                              <i
                                aria-hidden="true"
                                className="expand arrows alternate icon"
                                onClick={[Function]}
                              />
                            </Icon>
                            <span
                              style={
                                Object {
                                  "fontSize": "11px",
                                  "visibility": "hidden",
                                }
                              }
                            >
                              Expand
                            </span>
                          </div>
                        </MenuItem>
                      </div>
                    </Menu>
                  </div>
                </MenuItem>
              </div>
            </Menu>
          </div>
        </ComponentMenuBar>
      </div>
      <div
        style={
          Object {
            "height": "90%",
            "width": "100%",
          }
        }
      >
        <div>
          Go!
        </div>
      </div>
      <div
        style={
          Object {
            "height": "3%",
          }
        }
      />
    </div>
  </Card>
</ComponentCard>
`;

exports[`ComponentCard Should handle expanding a non-framed full page component. 1`] = `
<ComponentCard
  componentName="Let's"
  dockItems={Array []}
  expandedStyle={
    Object {
      "height": "85vh",
      "width": "85vh",
    }
  }
  frameHeight={0}
  frameWidth={0}
  headerHeight={20}
  height="525px"
  iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
  isDataReady={false}
  isFramedComponent={false}
  isFullPage={true}
  menuItems={Array []}
  padding={0}
  showSettings={false}
  width="525px"
>
  <Card
    centered={true}
    className="bioblocks-component-card"
    style={
      Object {
        "border": "5em black solid",
        "height": "85vh",
        "maxWidth": "unset",
        "padding": "5px",
        "width": "85vh",
      }
    }
  >
    <div
      className="ui centered card bioblocks-component-card"
      onClick={[Function]}
      style={
        Object {
          "border": "5em black solid",
          "height": "85vh",
          "maxWidth": "unset",
          "padding": "5px",
          "width": "85vh",
        }
      }
    >
      <div
        style={
          Object {
            "height": "7%",
          }
        }
      >
        <ComponentMenuBar
          componentName="Let's"
          height={20}
          iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
          isExpanded={true}
          menuItems={Array []}
          onExpandToggleCb={[Function]}
          opacity={0.85}
          width="100%"
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <Menu
              secondary={true}
              style={
                Object {
                  "height": 20,
                  "margin": 0,
                }
              }
            >
              <div
                className="ui secondary menu"
                style={
                  Object {
                    "height": 20,
                    "margin": 0,
                  }
                }
              >
                <Menu
                  fluid={false}
                  secondary={true}
                  style={
                    Object {
                      "width": "auto",
                    }
                  }
                  widths={6}
                >
                  <div
                    className="ui secondary six item menu"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                  >
                    <MenuItem
                      fitted="horizontally"
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <div
                        className="horizontally fitted item"
                        onClick={[Function]}
                        style={
                          Object {
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <img
                          alt="component icon"
                          src="assets/icons/bio-blocks-icon.svg"
                          style={
                            Object {
                              "height": "32px",
                              "padding": "2px",
                              "width": "32px",
                            }
                          }
                        />
                        Let's
                      </div>
                    </MenuItem>
                  </div>
                </Menu>
                <MenuItem
                  fitted="horizontally"
                  position="right"
                >
                  <div
                    className="right horizontally fitted item"
                    onClick={[Function]}
                  >
                    <Menu
                      secondary={true}
                    >
                      <div
                        className="ui secondary menu"
                      >
                        <MenuItem
                          style={
                            Object {
                              "flexDirection": "column",
                            }
                          }
                        >
                          <div
                            className="item"
                            onClick={[Function]}
                            style={
                              Object {
                                "flexDirection": "column",
                              }
                            }
                          >
                            <Icon
                              as="i"
                              name="compress"
                              onClick={[Function]}
                            >
                              <i
                                aria-hidden="true"
                                className="compress icon"
                                onClick={[Function]}
                              />
                            </Icon>
                            <span
                              style={
                                Object {
                                  "fontSize": "11px",
                                  "visibility": "hidden",
                                }
                              }
                            >
                              Close
                            </span>
                          </div>
                        </MenuItem>
                      </div>
                    </Menu>
                  </div>
                </MenuItem>
              </div>
            </Menu>
          </div>
        </ComponentMenuBar>
      </div>
      <div
        style={
          Object {
            "height": "90%",
            "width": "100%",
          }
        }
      >
        <div>
          Go!
        </div>
      </div>
      <div
        style={
          Object {
            "height": "3%",
          }
        }
      />
    </div>
  </Card>
</ComponentCard>
`;

exports[`ComponentCard Should handle resizing a framed component. 1`] = `
<ComponentCard
  componentName="Let's"
  dockItems={Array []}
  expandedStyle={
    Object {
      "height": "85vh",
      "width": "85vh",
    }
  }
  frameHeight={0}
  frameWidth={0}
  headerHeight={20}
  height="525px"
  iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
  isDataReady={false}
  isFramedComponent={true}
  isFullPage={false}
  menuItems={Array []}
  padding={0}
  showSettings={false}
  width="525px"
>
  <Card
    centered={true}
    className="bioblocks-component-card"
    style={
      Object {
        "height": "530.25px",
        "maxWidth": "unset",
        "padding": "0 0 0 5px",
        "width": "525px",
      }
    }
  >
    <div
      className="ui centered card bioblocks-component-card"
      onClick={[Function]}
      style={
        Object {
          "height": "530.25px",
          "maxWidth": "unset",
          "padding": "0 0 0 5px",
          "width": "525px",
        }
      }
    >
      <div
        style={
          Object {
            "height": "7%",
          }
        }
      >
        <ComponentMenuBar
          componentName="Let's"
          height={20}
          iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
          isExpanded={false}
          menuItems={Array []}
          onExpandToggleCb={[Function]}
          opacity={0.85}
          width="100%"
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <Menu
              secondary={true}
              style={
                Object {
                  "height": 20,
                  "margin": 0,
                }
              }
            >
              <div
                className="ui secondary menu"
                style={
                  Object {
                    "height": 20,
                    "margin": 0,
                  }
                }
              >
                <Menu
                  fluid={false}
                  secondary={true}
                  style={
                    Object {
                      "width": "auto",
                    }
                  }
                  widths={6}
                >
                  <div
                    className="ui secondary six item menu"
                    style={
                      Object {
                        "width": "auto",
                      }
                    }
                  >
                    <MenuItem
                      fitted="horizontally"
                      style={
                        Object {
                          "margin": 0,
                          "padding": 0,
                        }
                      }
                    >
                      <div
                        className="horizontally fitted item"
                        onClick={[Function]}
                        style={
                          Object {
                            "margin": 0,
                            "padding": 0,
                          }
                        }
                      >
                        <img
                          alt="component icon"
                          src="assets/icons/bio-blocks-icon.svg"
                          style={
                            Object {
                              "height": "32px",
                              "padding": "2px",
                              "width": "32px",
                            }
                          }
                        />
                        Let's
                      </div>
                    </MenuItem>
                  </div>
                </Menu>
                <MenuItem
                  fitted="horizontally"
                  position="right"
                >
                  <div
                    className="right horizontally fitted item"
                    onClick={[Function]}
                  >
                    <Menu
                      secondary={true}
                    >
                      <div
                        className="ui secondary menu"
                      >
                        <MenuItem
                          style={
                            Object {
                              "flexDirection": "column",
                            }
                          }
                        >
                          <div
                            className="item"
                            onClick={[Function]}
                            style={
                              Object {
                                "flexDirection": "column",
                              }
                            }
                          >
                            <Icon
                              as="i"
                              name="expand arrows alternate"
                              onClick={[Function]}
                            >
                              <i
                                aria-hidden="true"
                                className="expand arrows alternate icon"
                                onClick={[Function]}
                              />
                            </Icon>
                            <span
                              style={
                                Object {
                                  "fontSize": "11px",
                                  "visibility": "hidden",
                                }
                              }
                            >
                              Expand
                            </span>
                          </div>
                        </MenuItem>
                      </div>
                    </Menu>
                  </div>
                </MenuItem>
              </div>
            </Menu>
          </div>
        </ComponentMenuBar>
      </div>
      <div
        style={
          Object {
            "height": "90%",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "transform": "scale(calc(515/0),calc((512 - 20)/0))",
              "transformOrigin": "top left",
            }
          }
        >
          <div>
            Go!
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "height": "3%",
          }
        }
      />
    </div>
  </Card>
</ComponentCard>
`;

exports[`ComponentCard Should match existing snapshot when framed. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "530.25px",
      "maxWidth": "unset",
      "padding": "0 0 0 5px",
      "width": "525px",
    }
  }
>
  <div
    style={
      Object {
        "height": "7%",
      }
    }
  >
    <ComponentMenuBar
      componentName="The Boxer"
      height={20}
      iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
      isExpanded={false}
      menuItems={Array []}
      onExpandToggleCb={[Function]}
      opacity={0.85}
      width="100%"
    />
  </div>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "transformOrigin": "top left",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "height": "3%",
      }
    }
  />
</Card>
`;

exports[`ComponentCard Should match existing snapshot when given default props. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "530.25px",
      "maxWidth": "unset",
      "padding": "0 0 0 5px",
      "width": "525px",
    }
  }
>
  <div
    style={
      Object {
        "height": "7%",
      }
    }
  >
    <ComponentMenuBar
      componentName="The Boxer"
      height={20}
      iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
      isExpanded={false}
      menuItems={Array []}
      onExpandToggleCb={[Function]}
      opacity={0.85}
      width="100%"
    />
  </div>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "height": "3%",
      }
    }
  />
</Card>
`;

exports[`ComponentCard Should match existing snapshot when not framed. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "530.25px",
      "maxWidth": "unset",
      "padding": "0 0 0 5px",
      "width": "525px",
    }
  }
>
  <div
    style={
      Object {
        "height": "7%",
      }
    }
  >
    <ComponentMenuBar
      componentName="The Boxer"
      height={20}
      iconSrc="https://bioblocks.org/media/5d3f528028d9720a3428e4b2"
      isExpanded={false}
      menuItems={Array []}
      onExpandToggleCb={[Function]}
      opacity={0.85}
      width="100%"
    />
  </div>
  <div
    style={
      Object {
        "height": "90%",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "height": "3%",
      }
    }
  />
</Card>
`;
